fixing test and added new expense route
