# src/routes/expense.route.ts
@@ -8,19 +8,19 @@ import { AuthMiddleware } from '@/middlewares/auth.middleware';
 export class ExpenseRoute implements Routes {
   public path = '/expense';
   public router = Router();
-  public expense = new ExpenseController();
+  public expenseController = new ExpenseController();
 
   constructor() {
     this.initializeRoutes();
   }
 
   private initializeRoutes() {
-    this.router.get(`${this.path}`, AuthMiddleware, this.expense.getExpenses);
-    this.router.get(`${this.path}/:id`, this.expense.getExpenseById);
-    this.router.get(`${this.path}/filter/:category`, this.expense.getExpenseByCategory);
-    this.router.get(`${this.path}/filter/:startDate/:endDate`, this.expense.getExpenseByDate);
-    this.router.post(`${this.path}`, ValidationMiddleware(ExpenseDto), this.expense.createExpense);
-    this.router.put(`${this.path}/:id`, ValidationMiddleware(ExpenseDto, true), this.expense.updateExpense);
-    this.router.delete(`${this.path}/:id`, this.expense.deleteExpenseById);
+    this.router.get(`${this.path}`, AuthMiddleware, this.expenseController.getExpenses);
+    this.router.get(`${this.path}/:id`, AuthMiddleware, this.expenseController.getExpenseById);
+    this.router.get(`${this.path}/filter/:category`, AuthMiddleware, this.expenseController.getExpenseByCategory);
+    this.router.get(`${this.path}/filter/:startDate/:endDate`, AuthMiddleware, this.expenseController.getExpenseByDate);
+    this.router.post(`${this.path}`, ValidationMiddleware(ExpenseDto), AuthMiddleware, this.expenseController.createExpense);
+    this.router.put(`${this.path}/:id`, ValidationMiddleware(ExpenseDto, true), AuthMiddleware, this.expenseController.updateExpense);
+    this.router.delete(`${this.path}/:id`, AuthMiddleware, this.expenseController.deleteExpenseById);
   }
 }
